# vertice-IA

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  Caddyfile  Dockerfile  Procfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.public-http.yml  docker-compose.yml  pyproject.toml  requirements.txt  sdd.md
.claude/: launch.json
.planning/raiox/: PLAN.md
app/: __init__.py  config.py  main.py
app/adapters/db/: postgres.py  schema.sql  seed.sql  sqlite.py
app/adapters/guardrails/: input_sanitizer.py  output_validator.py
app/adapters/llm/: azure_embeddings_adapter.py  azure_openai_adapter.py  factory.py  gaia_adapter.py  gpt_oss_adapter.py  maritaca_adapter.py  mock_adapter.py  openai_adapter.py  (+1 more)
app/api/: deps.py
app/skills/: README.md  analise_intencoes_transcricao_cliente.md  avaliacao_de_risco_em_atendimento_ao_cli.md  churn_classifier.md  gerartabela.md  orientador_retentivo_intencao_atendimento.md  radar_intent.md  radar_summary.md
app/templates/: base.html
app/text2sql/: AGENTS.md
data/: vertice.db
docs/: DEPLOY-HOSTINGER.md
scripts/: backup.sh  deploy.sh  docker_entrypoint.sh  fix_radar_owner_leak.py  fix_text2sql.py  gen_secrets.sh  init_db.py  install_docker.sh  restore.sh  seed_demo.py
tests/: conftest.py  test_api_endpoints.py  test_artifact_store.py  test_auth.py  test_bko_service.py  test_churn.py  test_dynamic_table.py  test_feature_access.py  test_pages_smoke.py  test_radar.py  test_radar_truncate.py  test_raiox_phase0.py  test_raiox_phase1.py  test_rbac.py
(+115 files in other folders)
