[project]
name = "vertice"
version = "1.0.0"
description = "Framework de Building Blocks de IA — Spec-Driven Development, arquitetura hexagonal"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
